--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,25 +1,14 @@
 .footer{
-    height: 30vh;
+    height: 100px;
     width: 99vw;
     background-color: rgb(82, 82, 82);
     padding: 5px 140px;
     display: flex;
     justify-content: space-between;
+    color: white;
 }
-.footer__newspromoction{
-    font-size: 24px;
-    color: rgba(255, 255, 255, 0.801);
-}
-.footer__newspromoction > h3{
-    font-size: 30px;
-}
-.footer__item{
-    list-style: none;
+.footer > p{
+    width: 35%;
     text-align: left;
-}
-.footer__item>p{
-    margin: 0px;
-}
-.footer__itemdata{
-    font-size: 19px;
+    font-size: 17px;
 }
