--- a/src/components/promocion/promoction.css
+++ b/src/components/promocion/promoction.css
@@ -2,7 +2,7 @@
     height: 100%;
     width: 100%;
     background-color: #F5F5F5;
-    padding: 20px 150px 80px;
+    padding: 20px 150px 20px;
     z-index: 2;
 }
 .promoction__h{
@@ -39,6 +39,14 @@
 .promoction__textbox>p {
     width: 80%;
     margin-left: 5px;
+}
+.promoction__showmore{
+    height: 80px;
+    width: 100%;
+}
+.promoction__showmore > img{
+    height: 60%;
+    width: auto;
 }
 @media only screen and (max-width: 1400px) {
     .promoction {
