--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -16,4 +16,30 @@
     font-size: 28px;
     margin: 0px auto;
     opacity: .8;
+} 
+.about__readmore {
+    opacity: .9;
+    margin-left: 8px;
+    cursor: pointer;
+}
+.about__readmore:hover {
+    opacity: 1;
+}
+
+.about__hidden{
+    display: none;
+}
+@media only screen and (max-width: 1100px) {
+    .about>p {
+        width: 85%;
+    }
+}
+@media only screen and (max-width: 400px) {
+    .about{
+        padding: 15px;
+    }
+    .about>p {
+        width: 95%;
+        font-size: 20px;
+    }
 }
