--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -2,13 +2,15 @@
     height: 100px;
     width: 99vw;
     background-color: rgb(82, 82, 82);
-    padding: 5px 140px;
-    display: flex;
-    justify-content: space-between;
+    padding: 5px 50px;
     color: white;
 }
 .footer > p{
-    width: 35%;
     text-align: left;
     font-size: 17px;
+} 
+@media only screen and (max-width: 400px) {
+    .footer {
+        padding: 15px 15px 130px;
+    }
 }
