--- a/src/components/navi/nav.css
+++ b/src/components/navi/nav.css
@@ -33,9 +33,8 @@
     justify-content: center;
 }
 .nav__loupeimg{
-    margin-top: 5px;
-    height: 32px;
-    width: 32px;
+    height: 75%;
+    width: auto;
 }
 .nav__input{
     margin-left: 3px;
@@ -60,6 +59,25 @@
     .nav__content {
         padding: 0px 10px 0px 30px;
     }
-  
-
+}
+@media only screen and (max-width: 1100px) {
+    .nav__contentbox {
+        width: 50%;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .nav__contentbox{
+        display:none;
+    }
+    .nav__content{
+        max-width: 99vw;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .nav__content{
+        padding: 0px 15px;
+    }
+    .nav__content> a > h1{
+        font-size: 22px;
+    }
 }
