--- a/src/components/newsletter/newsletter.css
+++ b/src/components/newsletter/newsletter.css
@@ -9,13 +9,6 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
-.newsletter__background{
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    height: 380px;
-    width: 99vw;
-}
 .newsletter__textbox{
     position: absolute;
     z-index: 2;
@@ -49,7 +42,7 @@
     background-color:#8E0C15;
     color: white;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 18px; 
     border: none;
 }
 .newsletter__inputbox>button>p {
@@ -72,6 +65,61 @@
         margin-right: 5px;
     }
     .newsletter__checkdiv {
-        width:51%;
+        width: 51%;
+    }
+    .newsletter {
+        background-attachment: local;
+        padding: 0 50px;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .newsletter__checkdiv {
+        width: 95%;
+    }
+    .newsletter__inputbox {
+        margin-top: 30px;
+    }
+}
+@media only screen and (max-width: 800px) {
+    .newsletter__inputbox {
+        margin-top: 70px;
+        display: flex;
+        width: 90%;
+    }
+    .newsletter__input {
+        height: 45px;
+        width: 95%;
+        margin-right: 25px;
+        text-align: center;
+        font-size: 20px;
+        color: rgba(0, 0, 0, 0.616);
+    }
+    .newsletter__inputbox>button {
+        height: 45px;
+        width: 40%;
+        background-color: #8E0C15;
+        color: white;
+        font-weight: bold;
+        font-size: 14px;
+        border: none;
+    }
+}
+@media only screen and (max-width: 400px) {
+    .newsletter{
+        padding: 15px;
+        background-size: 200%;
+    }
+    .newsletter__textbox>h2 {
+        font-size: 24px;
+        margin-bottom: 0px;
+    }
+    .newsletter__textbox>p{
+        font-size: 16px;
+        margin-bottom: 0px;
+    }
+    .newsletter__inputbox {
+        margin-top: 30px;
+        display: flex;
+        width: 90%;
     }
 }
