--- a/src/components/navi/nav.css
+++ b/src/components/navi/nav.css
@@ -55,6 +55,45 @@
 .nav__link:hover {
     opacity: 1;
 }
+.nav__hamburger{
+    position: relative;
+    height: 25px;
+    width: 30px;
+    left: 0px;
+    margin-right: 5px;
+    margin-top: 5px;
+    display: none;
+}
+.nav__hamburger > div{
+    height: 5px;
+    width: 100%;
+    background-color: white;
+}
+.nav__hamburger-top{
+    position: absolute;
+    top: 0px;
+}
+.nav__hamburger-top--active {
+    transform-origin: right;
+    transform: rotate(-45deg);
+    top: -2px;
+}
+.nav__hamburger-mid {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.nav__hamburger-mid--active {
+    display: none;
+}
+.nav__hamburger-bottom{
+    position:  absolute;
+    bottom: 0px;
+}
+.nav__hamburger-bottom--active {
+    transform-origin: right;
+    transform: rotate(45deg);
+}
 @media only screen and (max-width: 1400px) {
     .nav__content {
         padding: 0px 10px 0px 30px;
@@ -67,10 +106,24 @@
 }
 @media only screen and (max-width: 800px) {
     .nav__contentbox{
-        display:none;
+        display: none;
+        position: absolute;
+        top: 80px;
+        left: 0px;
+        width: 99vw;
+        flex-direction: column;
+        padding-bottom:30px ;
+        background-image: url("./img/backgroundContent.png");
+        background-position: center;
+        background-size: cover;
+        border-top: 1px solid rgba(0, 0, 0, 0.328);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.328);
     }
     .nav__content{
         max-width: 99vw;
+    }
+    .nav__hamburger{
+        display: block;
     }
 }
 @media only screen and (max-width: 800px) {
