--- a/src/components/global.css
+++ b/src/components/global.css
@@ -3,10 +3,10 @@
     font-family: 'Poppins',
     sans-serif;
     outline: none;
+    transition: .5s;
 }
 a{
     text-decoration: none;
-    color: white;
 }
 a:link {text-decoration: none;}
 a:visited {text-decoration: none;}
