--- a/src/components/navi/nav.css
+++ b/src/components/navi/nav.css
@@ -11,9 +11,13 @@
     align-items: center;
     color: white;   
     font-size: 26px;
+    background-image: url('./img/backgroundNav.png') ;
     background-position: center;
     background-size: cover;
     box-shadow: 0px 0px 15px black;
+}
+.nav__content > a{
+    color: white;
 }
 .nav__contentbox{
     display: flex;
@@ -104,7 +108,7 @@
         width: 50%;
     }
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
     .nav__contentbox{
         display: none;
         position: absolute;
