--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -4,6 +4,8 @@
     background-color: rgb(82, 82, 82);
     padding: 5px 50px;
     color: white;
+    display: flex;
+    align-items: center;
 }
 .footer > p{
     text-align: left;
