--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 .header__background{
     position: relative;
     height: 70vh;
-    width: 99vw;
+    width: 100%;
     color: white;
     background-image: url('./img/background.png');
     background-position: center;
@@ -20,7 +20,7 @@
     top: 42%;
     left: 50%;
     transform: translate(-50%,-50%);
-    z-index: 2;
+    z-index: 2; 
     display: flex;
     flex-direction: column;
     justify-content: center;
