--- a/src/components/navi/nav.css
+++ b/src/components/navi/nav.css
@@ -22,7 +22,7 @@
 .nav__contentbox{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-between; 
     width: 40%;
     font-size: 24px;
     margin-right: 5%;
@@ -115,7 +115,7 @@
         position: absolute;
         top: 80px;
         left: 0px;
-        width: 99vw;
+        width: 100%;
         flex-direction: column;
         padding-bottom:30px ;
         background-image: url("./img/backgroundContent.png");
