--- a/src/components/newsletter/newsletter.css
+++ b/src/components/newsletter/newsletter.css
@@ -26,10 +26,9 @@
     font-size: 22px;
 }
 .newslatter__btn{
-    margin-top: 70px;
+    margin-top: 100px;
     width: 300px;
     height: 60px;
-    margin: 0 auto;
     background-color: #3b5998;
     border: none;
     opacity: .9;
@@ -42,28 +41,6 @@
     font-weight: bold;
     font-size: 18px;
     margin: 0px;
-}
-.newsletter__checbox{
-    border-radius: 50%;
-    border: none;
-    margin-top: 16px;
-    margin-left: 0px;
-    margin-right: 12px;
-}
-.newsletter__checkdiv{
-    display: flex;
-    width: 36.6%;
-    font-size: 14px;
-}
-.newsletter__thanks{
-    position: absolute;
-    top: 50%;
-    left:50%;
-    color: white;
-    transform: translate(-50%, -50%);
-    font-size: 40px;
-    font-weight: bold;
-    display: none;
 }
 @media only screen and (max-width: 1400px) {
     .newsletter {
@@ -97,8 +74,11 @@
         padding: 15px;
         background-size: 200%;
     }
+    .newsletter__textbox{
+        width: 90%;
+    }
     .newsletter__textbox>h2 {
-        font-size: 28px;
+        font-size: 25px;
         margin-bottom: 0px;
     }
     .newsletter__textbox>p{
@@ -106,7 +86,9 @@
         margin-bottom: 0px;
     }
     .newslatter__btn {
+        margin: 0 auto;
         margin-top: 30px;
+
         display: flex;
         width: 90%;
     }
